# full-stack-fastapi-nextjs-llm-template

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
CHANGELOG/: index.html
ai_agent/: .env.prod.example  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
ai_agent/.github/workflows/: ci.yml
ai_agent/backend/: .env.example  pyproject.toml
ai_agent/backend/alembic/versions/: 2026-03-23_initial.py
ai_agent/backend/app/: admin.py  main.py
ai_agent/backend/app/agents/: assistant.py  prompts.py
ai_agent/backend/app/agents/tools/: rag_tool.py
ai_agent/backend/app/api/: deps.py
ai_agent/backend/app/api/routes/v1/: __init__.py  agent.py  conversations.py  files.py  rag.py  users.py
ai_agent/backend/app/commands/: rag.py  seed.py
ai_agent/backend/app/core/: config.py  logging.py
ai_agent/backend/app/db/models/: __init__.py  conversation.py  sync_source.py
ai_agent/backend/app/rag/: config.py  documents.py  embeddings.py  ingestion.py  models.py  reranker.py  retrieval.py  vectorstore.py
ai_agent/backend/app/rag/connectors/: __init__.py
ai_agent/backend/app/rag/sources/: __init__.py
ai_agent/backend/app/repositories/: __init__.py  conversation.py  rag_document.py  sync_log.py  sync_source.py  user.py
ai_agent/backend/app/schemas/: sync_source.py
ai_agent/backend/app/services/: __init__.py  conversation.py  file_upload.py  rag_document.py  sync_source.py
ai_agent/backend/app/worker/: celery_app.py
ai_agent/backend/app/worker/tasks/: rag_tasks.py
ai_agent/backend/tests/: test_admin.py  test_migrations.py  test_worker.py
ai_agent/backend/tests/api/: test_auth.py  test_exceptions.py  test_users.py
ai_agent/docs/: architecture.md  commands.md  configuration.md  file-processing.md  permissions.md
ai_agent/docs/howto/: add-rag-source.md  configure-sync-sources.md
ai_agent/frontend/: next.config.ts  package.json
ai_agent/frontend/src/app/: global-error.tsx  layout.tsx
ai_agent/frontend/src/hooks/: use-conversations.ts
ai_agent/frontend/src/lib/: constants.ts  rag-api.ts
ai_agent/frontend/src/types/: auth.ts
fastapi_gen/: prompts.py
search/: search_index.json
template/: VARIABLES.md
template/hooks/: post_gen_project.py
template/{{cookiecutter.project_slug}}/: .env.prod.example  CLAUDE.md  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
template/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
template/{{cookiecutter.project_slug}}/backend/: .env.example
template/{{cookiecutter.project_slug}}/docs/: commands.md  configuration.md
template/{{cookiecutter.project_slug}}/frontend/: package.json
test_20/: Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
test_20/backend/cli/: commands.py
tests/: test_prompts.py  test_rag_integration.py  test_template_integration.py
website/: astro.config.mjs  package.json
website/public/: site.webmanifest
website/scripts/: bundle-templates.ts
website/src/components/: LanguageSwitcher.astro  Navbar.astro
website/src/data/: faq.ts
website/src/i18n/: translations.ts
website/src/layouts/: BlogLayout.astro  Layout.astro
website/src/pages/: configurator.astro  faq.astro  index.astro  llms-full.txt.ts  llms.txt.ts  robots.txt.ts
(+151 files in other folders)
