[project]
name = "ai_agent"
version = "0.1.0"
description = "My FastAPI project"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your@email.com" },
]

dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "orjson>=3.10.0",
    "logfire[fastapi,asyncpg]>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "redis>=5.2.0",
    "fastapi-cache2>=0.2.2",
    "slowapi>=0.1.9",
    "fastapi-pagination>=0.12.31",
    "sqladmin>=0.19.0",
    "itsdangerous>=2.2.0",
    "celery[redis]>=5.4.0",
    "flower>=2.0.0",
    "boto3>=1.35.0",
    "pydantic-ai>=0.0.39",
    # Vector store
    "pymilvus>=2.4.0",
    # Text splitting
    "langchain-text-splitters>=0.3.0",
    # BM25 for hybrid search
    "rank-bm25>=0.2.2",
    # Uses existing openai dependency
    "pymupdf>=1.25.0",
    "pillow>=10.0.0",
    "python-docx>=1.1.0",
    "llama-cloud>=1.0.0",
    "liteparse>=0.1.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "anyio[trio]>=4.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
ai_agent = "cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
    "E402", # module level import not at top (needed for conditional Jinja2 imports)
    "B008", # function call in default argument (needed for FastAPI Depends)
    "B905", # zip() without strict= (Python 3.10+ style, not needed)
    "RUF012", # mutable class attribute without ClassVar (used in parser base class)
    "RUF059", # unpacked variable never used (CLI destructuring pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "cli"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "app/core/logfire_setup.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.fastapi-fullstack]
generator_version = "0.2.2"
generated_at = "2026-03-23T11:29:17.679166+00:00"
